--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,14 @@
 name: angular_ui
 version: 0.2.0
-author: Sergey Akopkokhyants <akserg@gmail.com>, Tonis Pool <tonis.pool@gmail.com>.
+author: Sergey Akopkokhyants <akserg@gmail.com>, Tonis Pool <tonis.pool@gmail.com>, Gunter Zochbauer<guenter@gzoechbauer.com>
 description: Port of Angular-UI to Dart.
 homepage: http://akserg.github.io/angular.dart.ui
 environment:
   sdk: '>=1.0.0+10 <2.0.0'
 dependencies:
-  angular: '>=0.9.4'
+  angular: '>=0.9.5'
   browser: '>=0.9.1'
-  js: '>=0.2.1'
-  logging_handlers: any
+  js: '>=0.2.2'
+  logging_handlers: '>=0.8.0'
 dev_dependencies:
   unittest: '>=0.9.3'
