--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,9 @@
 name: angular_ui
-version: 0.2.0
-author: Sergey Akopkokhyants <akserg@gmail.com>, Tonis Pool <tonis.pool@gmail.com>, Gunter Zochbauer <gzoechi@gmail.com>.
+version: 0.2.0+1
+authors:
+- Sergey Akopkokhyants <akserg@gmail.com>
+- Tonis Pool <tonis.pool@gmail.com>
+- Gunter Zochbauer <gzoechi@gmail.com>
 description: Port of Angular-UI to Dart.
 homepage: http://akserg.github.io/angular.dart.ui
 environment:
