--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,8 +10,8 @@ homepage: http://akserg.github.io/angular.dart.ui
 environment:
   sdk: '>=1.3.0 <2.0.0'
 dependencies:
-  angular: '>=0.10.0'
-  js: '>=0.2.2'
+  angular: '>=0.10.0 <0.11.0'
+  js: '>=0.2.2 <0.3.0'
 dev_dependencies:
   unittest: '>=0.10.1+2 <0.11.0'
   mock: '>=0.10.0+1 <0.11.0'
