--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,5 +13,6 @@ dependencies:
   angular: '>=0.10.0 <0.11.0'
   js: '>=0.2.2 <0.3.0'
 dev_dependencies:
+  ghpages_generator: '>=0.1.0 <1.0.0'
   mock: '>=0.10.0+1 <0.11.0'
   unittest: '>=0.10.1+2 <0.11.0'
