--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: angular_ui
-version: 0.5.1
+version: 0.5.2
 authors:
 - Sergey Akopkokhyants <akserg@gmail.com>
 - Tonis Pool <tonis.pool@gmail.com>
@@ -9,10 +9,9 @@ authors:
 description: Port of Angular-UI to Dart.
 homepage: http://akserg.github.io/angular.dart.ui
 environment:
-  sdk: '>=1.4.2 <2.0.0'
+  sdk: '>=1.4.3 <2.0.0'
 dependencies:
   angular: '>=0.12.0 <0.13.0'
-  js: '>=0.2.2 <0.3.0'
 dev_dependencies:
   mock: '>=0.11.0+1 <0.12.0'
-  unittest: '>=0.11.0 <0.12.0'
+  unittest: '>=0.11.0+2 <0.12.0'
