--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,11 @@ environment:
 dependencies:
   angular: '1.0.0'
 dev_dependencies:
-  dartmocks: ">= 0.5.0"
-  guinness: ">= 0.1.3"
+  dartmocks: '>= 0.5.0'
+  guinness: '>= 0.1.3'
 transformers:
-- angular
+- angular:
+    html_files:
+      - packages/angular_ui/alert/alert.html
+      - web/buttons/buttons_demo.html
+      - web/alert/alert_demo.html
