Collapse migrated to Angular 1.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,3 +21,4 @@ transformers:
       - packages/angular_ui/alert/alert.html
       - web/buttons/buttons_demo.html
       - web/alert/alert_demo.html
+      - web/collapse/collapse_demo.html
