Dropdown_Toggle migrated to Angular 1.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,3 +22,4 @@ transformers:
       - web/buttons/buttons_demo.html
       - web/alert/alert_demo.html
       - web/collapse/collapse_demo.html
+      - web/dropdown_toggle/dropdown_toggle_demo.html
