Rating migrated to Angular 1.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,9 +18,8 @@ dev_dependencies:
 transformers:
 - angular:
     html_files:
-      - packages/angular_ui/alert/alert.html
       - web/buttons/buttons_demo.html
       - web/alert/alert_demo.html
       - web/collapse/collapse_demo.html
       - web/dropdown_toggle/dropdown_toggle_demo.html
-      - web/tooltip/tooltip_demo.html
+      - web/rating/rating_demo.html
