--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,3 +23,4 @@ transformers:
       - web/collapse/collapse_demo.html
       - web/dropdown_toggle/dropdown_toggle_demo.html
       - web/rating/rating_demo.html
+      - web/timepicker/timepicker_demo.html
