--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,3 +30,4 @@ transformers:
       - web/modal/modal_demo_embedded_template_static_backdrop.html
       - web/modal/modal_demo_template_element.html
       - web/modal/modal_demo_template_from_other_file.html
+      - web/accordion/accordion_demo.html
