Progressbar migrated to Angular Dart 1.0

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,3 +32,4 @@ transformers:
       - web/modal/modal_demo_template_from_other_file.html
       - web/accordion/accordion_demo.html
       - web/popover/popover_demo.html
+      - web/progressbar/progressbar_demo.html
