--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ authors:
 description: Port of Angular-UI to Dart.
 homepage: http://akserg.github.io/angular.dart.ui
 environment:
-  sdk: '>=1.6.0 <2.0.0'
+  sdk: '>=1.8.0 <2.0.0'
 dependencies:
   angular: '1.0.0'
 dev_dependencies:
@@ -33,3 +33,4 @@ transformers:
       - web/accordion/accordion_demo.html
       - web/popover/popover_demo.html
       - web/progressbar/progressbar_demo.html
+      - web/tabs/tabs_demo.html
