--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,3 +43,4 @@ transformers:
       - web/tabs/tabs_demo.html
       - web/carousel/carousel_demo.html
       - web/datepicker/datepicker_demo.html
+      - web/typeahead/typeahead_demo.html
