--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: angular_ui
-version: 0.6.0-beta
+version: 0.6.1
 authors:
 - Sergey Akopkokhyants <akserg@gmail.com>
 - Tonis Pool <tonis.pool@gmail.com>
@@ -11,7 +11,7 @@ homepage: http://akserg.github.io/angular.dart.ui
 environment:
   sdk: '>=1.6.0 <2.0.0'
 dependencies:
-  angular: '1.0.0'
+  angular: '>=1.0.0 <2.0.0'
 dev_dependencies:
   dartmocks: '>= 0.5.0'
   guinness: '>= 0.1.3'
