--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ homepage: http://akserg.github.io/angular.dart.ui
 environment:
   sdk: '>=1.6.0 <2.0.0'
 dependencies:
-  browser: any
+  browser: '>=0.10.0+2 <0.11.0'
   angular: '>=1.1.0 <2.0.0'
 dev_dependencies:
   dartmocks: '>= 0.5.0'
