--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,37 +11,39 @@ homepage: http://akserg.github.io/angular.dart.ui
 environment:
   sdk: '>=1.6.0 <2.0.0'
 dependencies:
-  browser: '>=0.10.0+2 <0.11.0'
   angular: '>=1.1.0 <2.0.0'
+  angular_material:
+    path: E:/git/angular.dart.material
+  browser: '>=0.10.0+2 <0.11.0'
 dev_dependencies:
   dartmocks: '>= 0.5.0'
   guinness: '>= 0.1.3'
 transformers:
 - angular:
     html_files:
-      - web/buttons/buttons_demo.html
-      - web/alert/alert_demo.html
-      - web/dragdrop/dragdrop_demo_tpl.html
-      - web/dragdrop/dragdrop_demo_image.html
-      - web/dragdrop/dragdrop_demo_list.html
-      - web/dragdrop/dragdrop_demo_multidropzones.html
-      - web/dragdrop/dragdrop_demo_shopping.html
-      - web/dragdrop/sortable_demo_simple.html
-      - web/dragdrop/sortable_demo_multi.html
-      - web/collapse/collapse_demo.html
-      - web/dropdown_toggle/dropdown_toggle_demo.html
-      - web/rating/rating_demo.html
-      - web/timepicker/timepicker_demo.html
-      - web/tooltip/tooltip_demo.html
-      - web/pagination/pagination_demo.html
-      - web/modal/modal_demo_embedded_template.html
-      - web/modal/modal_demo_embedded_template_static_backdrop.html
-      - web/modal/modal_demo_template_element.html
-      - web/modal/modal_demo_template_from_other_file.html
-      - web/accordion/accordion_demo.html
-      - web/popover/popover_demo.html
-      - web/progressbar/progressbar_demo.html
-      - web/tabs/tabs_demo.html
-      - web/carousel/carousel_demo.html
-      - web/datepicker/datepicker_demo.html
-      - web/typeahead/typeahead_demo.html
+    - web/buttons/buttons_demo.html
+    - web/alert/alert_demo.html
+    - web/dragdrop/dragdrop_demo_tpl.html
+    - web/dragdrop/dragdrop_demo_image.html
+    - web/dragdrop/dragdrop_demo_list.html
+    - web/dragdrop/dragdrop_demo_multidropzones.html
+    - web/dragdrop/dragdrop_demo_shopping.html
+    - web/dragdrop/sortable_demo_simple.html
+    - web/dragdrop/sortable_demo_multi.html
+    - web/collapse/collapse_demo.html
+    - web/dropdown_toggle/dropdown_toggle_demo.html
+    - web/rating/rating_demo.html
+    - web/timepicker/timepicker_demo.html
+    - web/tooltip/tooltip_demo.html
+    - web/pagination/pagination_demo.html
+    - web/modal/modal_demo_embedded_template.html
+    - web/modal/modal_demo_embedded_template_static_backdrop.html
+    - web/modal/modal_demo_template_element.html
+    - web/modal/modal_demo_template_from_other_file.html
+    - web/accordion/accordion_demo.html
+    - web/popover/popover_demo.html
+    - web/progressbar/progressbar_demo.html
+    - web/tabs/tabs_demo.html
+    - web/carousel/carousel_demo.html
+    - web/datepicker/datepicker_demo.html
+    - web/typeahead/typeahead_demo.html
