--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: angular_ui
-version: 0.6.5
+version: 0.6.4
 authors:
 - Sergey Akopkokhyants <akserg@gmail.com>
 - Tonis Pool <tonis.pool@gmail.com>
@@ -12,7 +12,8 @@ environment:
   sdk: '>=1.6.0 <2.0.0'
 dependencies:
   angular: '>=1.1.0 <2.0.0'
-  angular_material: '>=0.1.0 <1.0.0'
+  angular_material:
+    path: E:/git/angular.dart.material
   browser: '>=0.10.0+2 <0.11.0'
 dev_dependencies:
   dartmocks: '>= 0.5.0'
