--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,47 +1,19 @@
 name: angular_ui
-version: 0.6.5
+version: 0.0.1
 authors:
 - Sergey Akopkokhyants <akserg@gmail.com>
-- Tonis Pool <tonis.pool@gmail.com>
-- Gunter Zochbauer <gzoechi@gmail.com>
-- Francesco Cina <ufoscout@gmail.com>
-- Neeraj Mittal <mittal.neeraj@gmail.com>
-description: Port of Angular-UI to Dart.
+description: Angular-UI for Angular2.
 homepage: http://akserg.github.io/angular.dart.ui
 environment:
   sdk: '>=1.6.0 <2.0.0'
 dependencies:
   browser: '>=0.10.0+2 <0.11.0'
-  angular: '>=1.1.0 <2.0.0'
+  angular2: '>=2.0.0-alpha.6 <3.0.0'
+  logging_handlers: '>=0.8.0 <0.9.0'
 dev_dependencies:
   dartmocks: '>= 0.5.0'
   guinness: '>= 0.1.3'
 transformers:
-- angular:
-    html_files:
-      - web/buttons/buttons_demo.html
-      - web/alert/alert_demo.html
-      - web/dragdrop/dragdrop_demo_tpl.html
-      - web/dragdrop/dragdrop_demo_image.html
-      - web/dragdrop/dragdrop_demo_list.html
-      - web/dragdrop/dragdrop_demo_multidropzones.html
-      - web/dragdrop/dragdrop_demo_shopping.html
-      - web/dragdrop/sortable_demo_simple.html
-      - web/dragdrop/sortable_demo_multi.html
-      - web/collapse/collapse_demo.html
-      - web/dropdown_toggle/dropdown_toggle_demo.html
-      - web/rating/rating_demo.html
-      - web/timepicker/timepicker_demo.html
-      - web/tooltip/tooltip_demo.html
-      - web/pagination/pagination_demo.html
-      - web/modal/modal_demo_embedded_template.html
-      - web/modal/modal_demo_embedded_template_static_backdrop.html
-      - web/modal/modal_demo_template_element.html
-      - web/modal/modal_demo_template_from_other_file.html
-      - web/accordion/accordion_demo.html
-      - web/popover/popover_demo.html
-      - web/progressbar/progressbar_demo.html
-      - web/tabs/tabs_demo.html
-      - web/carousel/carousel_demo.html
-      - web/datepicker/datepicker_demo.html
-      - web/typeahead/typeahead_demo.html
+- $dart2js:
+    commandLineOptions:
+    - --enable-experimental-mirrors
