--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,3 +45,5 @@ transformers:
       - web/carousel/carousel_demo.html
       - web/datepicker/datepicker_demo.html
       - web/typeahead/typeahead_demo.html
+- $dart2js:
+    commandLineOptions: [--enable-experimental-mirrors]
