--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,7 +8,7 @@ environment:
   sdk: '>=1.6.0 <2.0.0'
 dependencies:
   browser: '>=0.10.0+2 <0.11.0'
-  angular2: '>=2.0.0-alpha.6 <3.0.0'
+  angular2: '^2.0.0-alpha.37'
   logging_handlers: '>=0.8.0 <0.9.0'
 dev_dependencies:
   dartmocks: '>= 0.5.0'
